--- a/transactionnotes.Web/Components/Pages/Weather.razor
+++ b/transactionnotes.Web/Components/Pages/Weather.razor
@@ -1,4 +1,8 @@
 ﻿@page "/weather"
+
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
 @attribute [StreamRendering(true)]
 @attribute [OutputCache(Duration = 5)]
 
