Added Authorization to transactionnotes API, via Authorization Header JWT token in bearer
To make this work, the transactionnotes client in Keycloack must be configured with an audience of 'transactionnotes' using these instructions https://dev.to/metacosmos/how-to-configure-audience-in-keycloak-kp4

--- a/transactionnotes.Web/Components/Pages/Weather.razor
+++ b/transactionnotes.Web/Components/Pages/Weather.razor
@@ -1,6 +1,9 @@
 ﻿@page "/weather"
 
 @using Microsoft.AspNetCore.Authorization
+@using transactionnotes.Web.Services
+
+@inject ErrorHandlingService ErrorHandler
 @attribute [Authorize]
 
 @attribute [StreamRendering(true)]
