--- a/transactionnotes.Web/Components/Layout/NavMenu.razor
+++ b/transactionnotes.Web/Components/Layout/NavMenu.razor
@@ -1,29 +1,65 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">transactionnotes</a>
+﻿@using System.Security.Claims
+@using Microsoft.AspNetCore.Components.Authorization
+@inject AuthenticationStateProvider AuthenticationStateProvider
+
+@* @if (User?.Identity?.IsAuthenticated == true)
+{ *@
+    <div class="top-row ps-3 navbar navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="">transactionnotes</a>
+        </div>
     </div>
-</div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+    <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+    <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+        <nav class="nav flex-column">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
+                </NavLink>
+            </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="counter">
+                    <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
+                </NavLink>
+            </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
+@*             @if (User?.IsInRole("transactionnotes-write") == true)
+            { *@
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="weather">
+                        <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
+                    </NavLink>
+                </div>
+            @* } *@
+        </nav>
+    </div>
+@* }
+else
+{
+    <p>Please log in to access the application.</p>
+    <NavLink class="nav-link" href="login">
+        <span class="bi bi-list-nested" aria-hidden="true"></span> Login
+    </NavLink>
+} *@
+
+@code {
+    private ClaimsPrincipal? User;
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        User = authState.User;
+        var inRole = User?.IsInRole("transactionnotes-write");
+
+        var roles = User?.Identities.SelectMany(i =>
+            {
+            return i.Claims
+                .Where(c => c.Type == i.RoleClaimType)
+                .Select(c => c.Value)
+                .ToList();
+            });
+        
+    }
+}
