--- a/transactionnotes.Web/Components/Layout/NavMenu.razor
+++ b/transactionnotes.Web/Components/Layout/NavMenu.razor
@@ -2,8 +2,8 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
-@* @if (User?.Identity?.IsAuthenticated == true)
-{ *@
+@if (User?.Identity?.IsAuthenticated == true)
+{
     <div class="top-row ps-3 navbar navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="">transactionnotes</a>
@@ -26,24 +26,24 @@
                 </NavLink>
             </div>
 
-@*             @if (User?.IsInRole("transactionnotes-write") == true)
-            { *@
+            @if (User?.IsInRole("transactionnotes-write") == true)
+            {
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="weather">
                         <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
                     </NavLink>
                 </div>
-            @* } *@
+            }
         </nav>
     </div>
-@* }
+}
 else
 {
     <p>Please log in to access the application.</p>
     <NavLink class="nav-link" href="login">
         <span class="bi bi-list-nested" aria-hidden="true"></span> Login
     </NavLink>
-} *@
+}
 
 @code {
     private ClaimsPrincipal? User;
