--- a/transactionnotes.Web/Components/Pages/Home.razor
+++ b/transactionnotes.Web/Components/Pages/Home.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
 
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
