--- a/transactionnotes.Web/Components/Layout/NavMenu.razor
+++ b/transactionnotes.Web/Components/Layout/NavMenu.razor
@@ -31,9 +31,28 @@
                         <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
                     </NavLink>
                 </div>
-            </AuthorizeView>
+			</AuthorizeView>
+
+			<AuthorizeView>
+				<Authorized>
+					<div class="nav-item px-3">
+						<NavLink class="nav-link">
+							<form action="Account/Logout" method="post">
+								<AntiforgeryToken />
+								@* <input type="hidden" name="ReturnUrl" value="@currentUrl" /> *@
+								<button type="submit" class="dropdown-item notify-item">
+									<i class="ri-logout-box-line"></i>
+									<span>Logout</span>
+								</button>
+							</form>
+						</NavLink>
+					</div>
+				</Authorized>
+			</AuthorizeView>
+
         </nav>
-    </div>
+
+	</div>
 </CascadingAuthenticationState>
 
 @code {
@@ -52,4 +71,5 @@
     //         .ToList();
     //     });
     }
+
 }
