--- a/transactionnotes.Web/Components/Layout/MainLayout.razor
+++ b/transactionnotes.Web/Components/Layout/MainLayout.razor
@@ -1,19 +1,34 @@
 ﻿@inherits LayoutComponentBase
 
+@using Microsoft.AspNetCore.Components.Authorization
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
-    </div>
+	</div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+	<main>
+		<CascadingAuthenticationState>
+			<AuthorizeView>
+				<Authorized>
+					<div class="top-row px-4">
+						<form action="Account/Logout" method="post">
+							<AntiforgeryToken />
+							@* <input type="hidden" name="ReturnUrl" value="@currentUrl" /> *@
+							<button type="submit" class="dropdown-item notify-item">
+								<i class="ri-logout-box-line"></i>
+								<span>Logout</span>
+							</button>
+						</form>
+					</div>
+				</Authorized>
+			</AuthorizeView>
+		</CascadingAuthenticationState>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+		<article class="content px-4">
+			@Body
+		</article>
+	</main>
 </div>
 
 <div id="blazor-error-ui">
