--- a/transactionnotes.Web/Components/Pages/Home.razor
+++ b/transactionnotes.Web/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize]
+@* @attribute [Authorize] *@
 
 <PageTitle>Home</PageTitle>
 
