--- a/transactionnotes.Web/wwwroot/app.css
+++ b/transactionnotes.Web/wwwroot/app.css
@@ -56,7 +56,7 @@ h1:focus {
 }
 
 .hero-bg {
-    background: url('https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?auto=format&fit=crop&w=1500&q=80') center center/cover no-repeat fixed;
+    background: url('/hero-bg.jpg') center center/cover no-repeat fixed;
     min-height: 100vh;
     width: 100vw;
     position: fixed;
@@ -84,6 +84,23 @@ h1:focus {
     width: 95vw;
     padding: 2rem 1.2rem 1.5rem 1.2rem;
     margin: 0 auto;
+}
+
+
+@media (min-width: 600px) {
+    .hero-login-box {
+        max-width: 600px;
+    }
+}
+@media (min-width: 900px) {
+    .hero-login-box {
+        max-width: 700px;
+    }
+}
+@media (min-width: 1200px) {
+    .hero-login-box {
+        max-width: 800px;
+    }
 }
 
 @media (max-width: 400px) {
