--- a/transactionnotes.Web/Components/Pages/Login.razor
+++ b/transactionnotes.Web/Components/Pages/Login.razor
@@ -1,10 +1,24 @@
 ﻿@page "/login"
 
 @using Microsoft.AspNetCore.Authorization
+@inject transactionnotes.Web.Services.OrganisationApiClient OrganisationApiClient
+@inject NavigationManager Navigation
 @attribute [Authorize]
 
 <h3>Login</h3>
 
 @code {
-
+    protected override async Task OnInitializedAsync()
+    {
+        // Check if user is in an organisation
+        var userOrganisations = await OrganisationApiClient.GetUserOrganisationAsync();
+        if (userOrganisations is null || userOrganisations.Tenants.Length == 0)
+        {
+	        Navigation.NavigateTo("/organisation-invitation");
+        }
+        else
+        {
+	        Navigation.NavigateTo("/"); // Go to landing page
+        }
+    }
 }
